Update GC log options for JDK11