@@ -223,6 +223,9 @@
              ;"-Dsun.security.jgss.native=true"
              ;"-Dsun.security.jgss.lib=/opt/mitkrb5/lib/libgssapi_krb5.so"
              ;"-Djavax.security.auth.useSubjectCredsOnly=false"
+             "-Xlog:gc*,compaction*,stringdedup*=debug,stringtable*,ergo*,safepoint,age=trace:file=gclog-%t:time,level,tags"
+             "-XX:+UseG1GC"
+             "-XX:+UseStringDeduplication"
              "-XX:+HeapDumpOnOutOfMemoryError"
              "--illegal-access=warn"])
 ; TODO: Re-add back needed GC options suitable for JDK11.
